--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,3 +12,13 @@ This file was automatically generated - do not edit
 </div>
 
 {% endblock %}
+
+{% block content %}
+{% if page.nb_url %}
+<a href="{{ page.nb_url }}" title="Download Notebook" class="md-content__button md-icon">
+  {% include ".icons/material/download.svg" %}
+</a>
+{% endif %}
+
+{{ super() }}
+{% endblock content %}
